2016-02-15  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 4.0

	* src/yppasswd.c (verifypassword): Don't check for identical
	password on shadow systems.
	* man/yppasswd.1.in: Document problems on shadow systems.

2016-02-02  Thorsten Kukuk  <kukuk@thkukuk.de>

	* nss_nis6: Remove directory.

	* Makefile.am: Remove nss_nis6.

	* src/ypset.c: Include internal.h header.

	* src/yppasswd_xdr.c (xdr_passwd): Use xdr_uint32_t for uid/gid.

	* lib: Remove libnis.

2016-01-20  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 3.5

	* lib/do_ypcall.c: Change resp argument of do_ypcall_tr from
	caddr_t to ypresp_val.
	* lib/internal.h: Likewise.
	* lib/yp_maplist.c: Adjust call of do_ypcall_tr.
	* lib/yp_master.c: Likewise.
	* lib/yp_match.c: Likewise.
	* lib/yp_next.c: Likewise.
	* lib/yp_order.c: Likewise.

2015-04-16  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 3.4

	* nss_nis6/nis-grp.c: Remove glibc special expect macros.
	* nss_nis6/nis-pwd.c: Likewise.
	* nss_nis6/nis-spwd.c: Likewise.
	* nss_nis6/nis-initgroups.c: Likewise.
	* nss_nis6/nis-alias.c: Likewise.
	* nss_nis6/nis-proto.c: Likewise.
	* nss_nis6/nis-publickey.c: Likewise.
	* nss_nis6/nis-ethers.c: Likewise.
	* nss_nis6/nis-network.c: Likewise.

2015-02-27  Thorsten Kukuk  <kukuk@thkukuk.de>

	* lib/yp_all_host.c (yp_all_host): Fix wrong pointer.
	Reported by David Binderman.

2014-12-05  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 3.3

	* nss_nis6/Makefile.am: link nss_nis6 against tirpc
	* src/Makefile.am: link everything against tirpc

	* src/yp_dump_binding.c: Add -p and -v parameters
	* man/yp_dump_binding.8.in: Document -p and -v parameters

	* lib/do_ypcall.c: Use clnt_create_timed
	* lib/yp_all_host.c: Likewise.

2014-12-03  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 3.2

	* man/yppoll.8.in: Add missing description.

	* man/yp_dump_binding.8.in: New.

	* src/yp_dump_binding.c: New program to show binding information.
