@@ -1,3 +1,7 @@
+2016-02-26  Thorsten Kukuk  <kukuk@thkukuk.de>
+
+	* src/yppoll.c (main): Check if the domain was bound.
+
 2016-02-15  Thorsten Kukuk  <kukuk@thkukuk.de>
 
 	* release version 4.0
